heatmap added to examples

--- a/PoS_tagger.ipynb
+++ b/PoS_tagger.ipynb
@@ -19,7 +19,12 @@
     "\n",
     "import numpy as np\n",
     "from sklearn.metrics import f1_score\n",
-    "from sklearn.preprocessing import MultiLabelBinarizer"
+    "from sklearn.preprocessing import MultiLabelBinarizer\n",
+    "import seaborn as sns\n",
+    "import pandas as pd\n",
+    "import warnings\n",
+    "\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -214,7 +219,10 @@
     "\n",
     "basque_sentence = \"Nire etxea oso handia da\"\n",
     "viterbi = basque_hmm.pos_get_viterbi(basque_sentence)\n",
-    "print(viterbi)"
+    "max_value = np.max(viterbi[:, -1])\n",
+    "\n",
+    "df = pd.DataFrame(viterbi, columns=spanish_sentence.split(), index=spanish_hmm.tags)\n",
+    "sns.heatmap(df, annot=True, cmap=\"YlGnBu\", vmin=max_value*1.5, vmax=0)"
    ]
   },
   {
@@ -257,11 +265,15 @@
    "source": [
     "spanish_hmm = HMM(\"ESP\")\n",
     "\n",
+    "print(\"Training the model: \", spanish_hmm.name)\n",
     "spanish_hmm.train(\"./UD_Spanish-AnCora/es_ancora-ud-train.conllu\")\n",
     "\n",
     "spanish_sentence = \"El gato Juan vive aqui\"\n",
     "viterbi = spanish_hmm.pos_get_viterbi(spanish_sentence)\n",
-    "print(viterbi)"
+    "max_value = np.max(viterbi[:, -1])\n",
+    "\n",
+    "df = pd.DataFrame(viterbi, columns=spanish_sentence.split(), index=spanish_hmm.tags)\n",
+    "sns.heatmap(df, annot=True, cmap=\"YlGnBu\", vmin=max_value*1.5, vmax=0)"
    ]
   }
  ],
