add explanation of basque test f1

--- a/PoS_tagger.ipynb
+++ b/PoS_tagger.ipynb
@@ -146,6 +146,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "If we compare both language models, we can see that basque HMM get worse scores than the spanish one. We suppose that this is caused by the characteristics of the language itself. In basque, suffixes are very used to create words and verbs, for example, \"amigo\" and \"el amigo\" are \"lagun\" and \"laguna\", the determiner is a suffix insted of being a separated word.\n",
+    "\n",
+    "With a HMM that takes into accounts words with all the additional morphemes, \"lagun\" and \"lagunak\" are completely different words, however, in spanish \"amigo\" and \"el amigo\" are processed as the same word. In basque a lot of words are out of vocabulary because words don't appear enough time it is not added to the vocabulary, it is more complicate to take into account all the possible suffix that a word can have (lagun, laguna, lagunak, lagunek, lagunekin...). To calculate better PoS in languages like basque, the lemma, subwords tokens or morphemes are needed insted of counting words."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Interpreting Viterbi algorithm graphically\n",
     "\n",
     "The Viterbi algorithm is a dynamic programming algorithm used to find the most likely state sequence of a HMM given a sequence of observation. It works by computing the probability of each state at each time step and then using these probabilities to compute the probability of the entire state sequence. The algorithm maintains a matrix of probabilities, where each row represents a state at a particular time step and each column represents a state at the previous time step. We can graphically see this matrix, and understand the decision process of the HMM."
