--- a/PoS_tagger.ipynb
+++ b/PoS_tagger.ipynb
@@ -144,9 +144,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we compare both language models, we can see that Basque HMM get worse scores than the Spanish one. We suppose that this is caused by the characteristics of the language itself. In Basque, suffixes are very commonly used to create words and verbs, for example, \"friend\" and \"the friend\" are \"lagun\" and \"laguna\", the determiner is a suffix insted of being a separated word.\n",
+    "If we compare both language models, we can see that Basque HMM get worse scores than the Spanish one. We suppose that this is caused by the characteristics of the language itself. In Basque, suffixes are very commonly used to create words and verbs, for example, \"*friend*\" and \"the *friend*\" are \"*lagun*\" and \"*laguna*\", the determiner is a suffix insted of being a separated word.\n",
     "\n",
-    "With a HMM that takes into accounts words with all the additional morphemes, \"lagun\" and \"lagunak\" are completely different words, however, in Spanish \"amigo\" and \"el amigo\" are processed as the same word. In Basque, a lot of words are out of the vocabulary because they do not appear enough times, and so they are not added to the vocabulary, making this language more complicated for a model to take into account all the possible suffixes that a word can have (lagun, laguna, lagunak, lagunek, lagunekin...). To calculate better PoS tags in languages like Basque, the lemma, subwords tokens and morphemes must be analysed, instead of just counting words."
+    "With a HMM that takes into accounts words with all the additional morphemes, \"*lagun*\" and \"*lagunak*\" are completely different words, however, in Spanish \"*amigo*\" and \"el *amigo*\" are processed as the same word. In Basque, a lot of words are out of the vocabulary because they do not appear often enough, and so they are not added to the vocabulary, making this language more complicated for a model to take into account all the possible suffixes that a word can have (lagun, laguna, lagunak, lagunek, lagunekin...). To calculate better PoS tags in languages like Basque, the lemma, subwords tokens and morphemes must be analysed, instead of just counting words."
    ]
   },
   {
@@ -255,7 +255,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SyntaxPoSProject",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -269,7 +269,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
