last run of the notebook

--- a/PoS_tagger.ipynb
+++ b/PoS_tagger.ipynb
@@ -117,20 +117,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Testing the model:  ESP Smoothing factor=0\n",
+      "Testing the model:  ESP\n",
       "Accuracy: 0.40991535671100365\n",
       "Recall: 0.9177177622792699\n",
       "Micro-averaged F1 score: 0.9449558806677109\n",
       "Macro-averaged F1 score: 0.6338176712145135\n",
       "---------------------\n",
-      "Testing the model:  EUS Smoothing factor=0\n",
+      "Testing the model:  EUS\n",
       "Accuracy: 0.21245828698553948\n",
       "Recall: 0.7873895826987511\n",
       "Micro-averaged F1 score: 0.8664804469273744\n",
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +604,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +649,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
